--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "node-fetch": "^2.6.1",
     "socket.io": "^3.0.1"
   }
